Fix bug with overflow of content

--- a/src/app/_shared-components/movie-card.module.css
+++ b/src/app/_shared-components/movie-card.module.css
@@ -5,7 +5,7 @@
 .card {
   width: 100%;
   display: grid;
-  grid-template: 120px / 100px auto 4.4rem;
+  grid-template: auto / 100px auto 4.4rem;
   gap: 1.5rem;
   overflow: hidden;
 }
